Overlay dos Postais

--- a/dev/index.html
+++ b/dev/index.html
@@ -131,52 +131,60 @@
         </div>
     </section>
 
-    <div class="swiper-container megalitismo-swiper">
+    <div class="swiper-container postais-swiper">
         <div class="swiper-wrapper">
-          <div class="swiper-slide">
-              <figure class="swiper__figure">
-                  <img src="assets/images/megalitismoSlider/cromeleque-fontainhas_768w.jpg" class="swiper__figure-image" alt="Cromeleque das Fontainhas">
-                  <figcaption class="swiper__figure-title">Cromeleque das Fontainhas</figcaption>
-              </figure>
-          </div>
-          <div class="swiper-slide">
-            <figure class="swiper__figure">
-                <img src="assets/images/megalitismoSlider/anta_768w.jpg" class="swiper__figure-image" alt="Anta de São Dinis">
-                <figcaption class="swiper__figure-title">Anta de São Dinis</figcaption>
-            </figure>
-          </div>
-          <div class="swiper-slide">
-            <figure class="swiper__figure">
-                <img src="assets/images/megalitismoSlider/alinhamento-tera_768w.jpg" class="swiper__figure-image" alt="Alinhamento de Tera">
-                <figcaption class="swiper__figure-title">Alinhamento de Tera</figcaption>
-            </figure>
-          </div>
-          <div class="swiper-slide">
-            <figure class="swiper__figure">
-                <img src="assets/images/megalitismoSlider/goncala_768w.jpg" class="swiper__figure-image" alt="Gonçala">
-                <figcaption class="swiper__figure-title">Gonçala</figcaption>
-            </figure>
-          </div>
-          <div class="swiper-slide">
-            <figure class="swiper__figure">
-                <img src="assets/images/megalitismoSlider/vale-del-rei_768w.jpg" class="swiper__figure-image" alt="Vale d'el Rei">
-                <figcaption class="swiper__figure-title">Vale d'el Rei</figcaption>
-            </figure>
-          </div>
-          <div class="swiper-slide">
-            <figure class="swiper__figure">
-                <img src="assets/images/megalitismoSlider/matalote_768w.jpg" class="swiper__figure-image" alt="Matalote">
-                <figcaption class="swiper__figure-title">Matalote</figcaption>
-            </figure>
-          </div>
-          <div class="swiper-slide">
-            <figure class="swiper__figure">
-                <img src="assets/images/megalitismoSlider/menir-de-tera_768w.jpg" class="swiper__figure-image" alt="Menir de Têra">
-                <figcaption class="swiper__figure-title">Menir de Têra</figcaption>
-            </figure>
-          </div>
+            <div class="swiper-slide">
+                <figure class="postais__figure">
+                    <img src="assets/images/megalitismoSlider/cromeleque-fontainhas_768w.jpg" class="postais__figure-image" alt="Cromeleque das Fontainhas">
+                    <figcaption class="postais__figure-title">Cromeleque das Fontainhas</figcaption>
+                </figure>
+                <div class="postais__info">
+                    <h3 class="postais__heading">Cromeleque das Fontainhas</h3>
+                    <p class="postais__tag">Pavia</p>
+                    <div class="btn-box u-margin-top-sm">
+                        <a href="" class="btn btn-postais">VER LOCALIZAÇÃO</a>
+                        <a href="" class="btn btn-postais">VER DESCRIÇÃO</a>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <figure class="postais__figure">
+                    <img src="assets/images/megalitismoSlider/anta_768w.jpg" class="postais__figure-image" alt="Anta de São Dinis">
+                    <figcaption class="postais__figure-title">Anta de São Dinis</figcaption>
+                </figure>
+            </div>
+            <div class="swiper-slide">
+                <figure class="postais__figure">
+                    <img src="assets/images/megalitismoSlider/alinhamento-tera_768w.jpg" class="postais__figure-image" alt="Alinhamento de Tera">
+                    <figcaption class="postais__figure-title">Alinhamento de Tera</figcaption>
+                </figure>
+            </div>
+            <div class="swiper-slide">
+                <figure class="postais__figure">
+                    <img src="assets/images/megalitismoSlider/goncala_768w.jpg" class="postais__figure-image" alt="Gonçala">
+                    <figcaption class="postais__figure-title">Gonçala</figcaption>
+                </figure>
+            </div>
+            <div class="swiper-slide">
+                <figure class="postais__figure">
+                    <img src="assets/images/megalitismoSlider/vale-del-rei_768w.jpg" class="postais__figure-image" alt="Vale d'el Rei">
+                    <figcaption class="postais__figure-title">Vale d'el Rei</figcaption>
+                </figure>
+            </div>
+            <div class="swiper-slide">
+                <figure class="postais__figure">
+                    <img src="assets/images/megalitismoSlider/matalote_768w.jpg" class="postais__figure-image" alt="Matalote">
+                    <figcaption class="postais__figure-title">Matalote</figcaption>
+                </figure>
+            </div>
+            <div class="swiper-slide">
+                <figure class="postais__figure">
+                    <img src="assets/images/megalitismoSlider/menir-de-tera_768w.jpg" class="postais__figure-image" alt="Menir de Têra">
+                    <figcaption class="postais__figure-title">Menir de Têra</figcaption>
+                </figure>
+            </div>
         </div>
-      </div>
+    </div>
 
     <section class="educacao">
         <div class="escolas">
