Finalização da funcionalidade de click para mostrar a info do postal

--- a/dev/index.html
+++ b/dev/index.html
@@ -136,7 +136,7 @@
             <div class="swiper-slide">
                 <figure class="postais__figure">
                     <img src="assets/images/megalitismoSlider/cromeleque-fontainhas_768w.jpg" class="postais__figure-image" alt="Cromeleque das Fontainhas">
-                    <figcaption class="postais__figure-title">Cromeleque das Fontainhas</figcaption>
+                    <figcaption class="postais__figure-title postais__figure-title--show">Cromeleque das Fontainhas</figcaption>
                 </figure>
                 <div class="postais__info">
                     <h3 class="postais__heading">Cromeleque das Fontainhas</h3>
@@ -150,8 +150,16 @@
             <div class="swiper-slide">
                 <figure class="postais__figure">
                     <img src="assets/images/megalitismoSlider/anta_768w.jpg" class="postais__figure-image" alt="Anta de São Dinis">
-                    <figcaption class="postais__figure-title">Anta de São Dinis</figcaption>
+                    <figcaption class="postais__figure-title postais__figure-title--show">Anta de São Dinis</figcaption>
                 </figure>
+                <div class="postais__info">
+                        <h3 class="postais__heading">Anta de São Dinis</h3>
+                        <p class="postais__tag">Pavia</p>
+                        <div class="btn-box u-margin-top-sm">
+                            <a href="" class="btn btn-postais">VER LOCALIZAÇÃO</a>
+                            <a href="" class="btn btn-postais">VER DESCRIÇÃO</a>
+                        </div>
+                    </div>
             </div>
             <div class="swiper-slide">
                 <figure class="postais__figure">
