Ficheiros de gulp build

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Museu Interactivo do Megalitismo</title>
     <link href="https://fonts.googleapis.com/css?family=Dosis:300,500,700" rel="stylesheet">
-    <link rel="stylesheet" href="assets/styles/styles-02e54f043f.css"/>
+    <link rel="stylesheet" href="assets/styles/styles-9ea61418ad.css"/>
     <script src="assets/scripts/Vendor-025e9571d0.js"></script>
 </head>
 <body>
@@ -122,57 +122,73 @@
             </div>
 
             <div class="btn-box">
-                <a href="#" class="btn btn-primary megalitismo__read-more">LER MAIS</a>
+                <a href="" class="btn btn-primary megalitismo__read-more">LER MAIS</a>
             </div>
         </div>
     </section>
 
-    <div class="swiper-container megalitismo-swiper">
+    <div class="swiper-container postais-swiper">
         <div class="swiper-wrapper">
-          <div class="swiper-slide">
-              <figure class="swiper__figure">
-                  <img src="assets/images/megalitismoSlider/cromeleque-fontainhas_768w.jpg" class="swiper__figure-image" alt="Cromeleque das Fontainhas">
-                  <figcaption class="swiper__figure-title">Cromeleque das Fontainhas</figcaption>
-              </figure>
-          </div>
-          <div class="swiper-slide">
-            <figure class="swiper__figure">
-                <img src="assets/images/megalitismoSlider/anta_768w.jpg" class="swiper__figure-image" alt="Anta de São Dinis">
-                <figcaption class="swiper__figure-title">Anta de São Dinis</figcaption>
-            </figure>
-          </div>
-          <div class="swiper-slide">
-            <figure class="swiper__figure">
-                <img src="assets/images/megalitismoSlider/alinhamento-tera_768w.jpg" class="swiper__figure-image" alt="Alinhamento de Tera">
-                <figcaption class="swiper__figure-title">Alinhamento de Tera</figcaption>
-            </figure>
-          </div>
-          <div class="swiper-slide">
-            <figure class="swiper__figure">
-                <img src="assets/images/megalitismoSlider/goncala_768w.jpg" class="swiper__figure-image" alt="Gonçala">
-                <figcaption class="swiper__figure-title">Gonçala</figcaption>
-            </figure>
-          </div>
-          <div class="swiper-slide">
-            <figure class="swiper__figure">
-                <img src="assets/images/megalitismoSlider/vale-del-rei_768w.jpg" class="swiper__figure-image" alt="Vale d'el Rei">
-                <figcaption class="swiper__figure-title">Vale d'el Rei</figcaption>
-            </figure>
-          </div>
-          <div class="swiper-slide">
-            <figure class="swiper__figure">
-                <img src="assets/images/megalitismoSlider/matalote_768w.jpg" class="swiper__figure-image" alt="Matalote">
-                <figcaption class="swiper__figure-title">Matalote</figcaption>
-            </figure>
-          </div>
-          <div class="swiper-slide">
-            <figure class="swiper__figure">
-                <img src="assets/images/megalitismoSlider/menir-de-tera_768w.jpg" class="swiper__figure-image" alt="Menir de Têra">
-                <figcaption class="swiper__figure-title">Menir de Têra</figcaption>
-            </figure>
-          </div>
+            <div class="swiper-slide">
+                <figure class="postais__figure">
+                    <img src="assets/images/megalitismoSlider/cromeleque-fontainhas_768w.jpg" class="postais__figure-image" alt="Cromeleque das Fontainhas">
+                    <figcaption class="postais__figure-title postais__figure-title--show">Cromeleque das Fontainhas</figcaption>
+                </figure>
+                <div class="postais__info">
+                    <h3 class="postais__heading">Cromeleque das Fontainhas</h3>
+                    <p class="postais__tag">Pavia</p>
+                    <div class="btn-box u-margin-top-m">
+                        <a href="" class="btn btn-postais">VER LOCALIZAÇÃO</a>
+                        <a href="" class="btn btn-postais btn-postais-descricao" data-page-name="cromelequeFontainhas">VER DESCRIÇÃO</a>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <figure class="postais__figure">
+                    <img src="assets/images/megalitismoSlider/anta_768w.jpg" class="postais__figure-image" alt="Anta de São Dinis">
+                    <figcaption class="postais__figure-title postais__figure-title--show">Anta de São Dinis</figcaption>
+                </figure>
+                <div class="postais__info">
+                        <h3 class="postais__heading">Anta de São Dinis</h3>
+                        <p class="postais__tag">Pavia</p>
+                        <div class="btn-box u-margin-top-sm">
+                            <a href="" class="btn btn-postais">VER LOCALIZAÇÃO</a>
+                            <a href="" class="btn btn-postais btn-postais-descricao" data-page-name="antaSaoDinis">VER DESCRIÇÃO</a>
+                        </div>
+                    </div>
+            </div>
+            <div class="swiper-slide">
+                <figure class="postais__figure">
+                    <img src="assets/images/megalitismoSlider/alinhamento-tera_768w.jpg" class="postais__figure-image" alt="Alinhamento de Tera">
+                    <figcaption class="postais__figure-title">Alinhamento de Tera</figcaption>
+                </figure>
+            </div>
+            <div class="swiper-slide">
+                <figure class="postais__figure">
+                    <img src="assets/images/megalitismoSlider/goncala_768w.jpg" class="postais__figure-image" alt="Gonçala">
+                    <figcaption class="postais__figure-title">Gonçala</figcaption>
+                </figure>
+            </div>
+            <div class="swiper-slide">
+                <figure class="postais__figure">
+                    <img src="assets/images/megalitismoSlider/vale-del-rei_768w.jpg" class="postais__figure-image" alt="Vale d'el Rei">
+                    <figcaption class="postais__figure-title">Vale d'el Rei</figcaption>
+                </figure>
+            </div>
+            <div class="swiper-slide">
+                <figure class="postais__figure">
+                    <img src="assets/images/megalitismoSlider/matalote_768w.jpg" class="postais__figure-image" alt="Matalote">
+                    <figcaption class="postais__figure-title">Matalote</figcaption>
+                </figure>
+            </div>
+            <div class="swiper-slide">
+                <figure class="postais__figure">
+                    <img src="assets/images/megalitismoSlider/menir-de-tera_768w.jpg" class="postais__figure-image" alt="Menir de Têra">
+                    <figcaption class="postais__figure-title">Menir de Têra</figcaption>
+                </figure>
+            </div>
         </div>
-      </div>
+    </div>
 
     <section class="educacao">
         <div class="escolas">
@@ -288,6 +304,19 @@
         <img src="assets/images/icons/finger-swipe.svg" class="galeria__finger-swipe" alt="">
     </div>
 
-    <script src="assets/scripts/App-79a5b5f6af.js"></script>
+    <div class="modal">
+        <div class="modal__content">
+            <span class="modal-close icon icon--close u-p-top-right-s">&nbsp;</span>
+            <!--<div class="postais__modal-content">
+                <h3 class="heading-postais">Cromeleque das Fontainhas</h3>
+                <p class="paragraph">O recinto das Fontainhas foi identificado pela equipa dos Serviços Geológicos de Portugal. A descoberta foi publicada em 1977, num artigo que mencionava a existência de seis menires, quatro dos quais in situ, um quinto monólito tombado e o sexto, o maior de todos e que se situava ao centro, partido junto à base e igualmente tombado. A campanha de escavações realizada em 2005 por Manuel Calado e Leonor Rocha, teve como objectivo avaliar o seu estado de conservação, recolher informação científica e proceder ao seu restauro. Um ano depois, todos os menires foram recolocados na sua posição original. Este recinto faz parte de um pequeno conjunto de monumentos praticamente exclusivos do Alentejo Central, tanto pela sua raridade como pela sua antiguidade e encontra-se classificado como Imóvel de Interesse Público desde 1990.</p>
+                <p class="paragraph"><small><span class="paragraph__strong">Fonte:</span> 'O Tempo das Pedras: Carta Arqueológica de Mora' de Manuel Calado, Leonor Rocha e Pedro Alvim</small></p>
+                <p class="paragraph u-margin-bottom-s"><span class="paragraph__strong">Freguesia:</span> Pavia</p>
+                <p class="paragraph"><span class="paragraph__strong">Acessibilidade:</span> Fácil</p> 
+                <a href="" class="btn btn-modal-postais">VER LOCALIZAÇÃO</a>
+            </div>-->
+        </div>
+    </div>
+    <script src="assets/scripts/App-0b4a7454b9.js"></script>
 </body>
 </html>
