--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Museu Interactivo do Megalitismo</title>
     <link href="https://fonts.googleapis.com/css?family=Dosis:300,500,700" rel="stylesheet">
-    <link rel="stylesheet" href="assets/styles/styles-9ea61418ad.css"/>
+    <link rel="stylesheet" href="assets/styles/styles-b65ac14a40.css"/>
     <script src="assets/scripts/Vendor-025e9571d0.js"></script>
 </head>
 <body>
@@ -138,8 +138,8 @@
                     <h3 class="postais__heading">Cromeleque das Fontainhas</h3>
                     <p class="postais__tag">Pavia</p>
                     <div class="btn-box u-margin-top-m">
-                        <a href="" class="btn btn-postais">VER LOCALIZAÇÃO</a>
-                        <a href="" class="btn btn-postais btn-postais-descricao" data-page-name="cromelequeFontainhas">VER DESCRIÇÃO</a>
+                        <a href="https://goo.gl/maps/GrC1GhfWRMC2" target="_blank" class="btn btn-postais">VER LOCALIZAÇÃO</a>
+                        <a href="" class="btn btn-postais btn-postais-descricao" data-pagename="cromelequeFontainhas">VER DESCRIÇÃO</a>
                     </div>
                 </div>
             </div>
@@ -152,8 +152,8 @@
                         <h3 class="postais__heading">Anta de São Dinis</h3>
                         <p class="postais__tag">Pavia</p>
                         <div class="btn-box u-margin-top-sm">
-                            <a href="" class="btn btn-postais">VER LOCALIZAÇÃO</a>
-                            <a href="" class="btn btn-postais btn-postais-descricao" data-page-name="antaSaoDinis">VER DESCRIÇÃO</a>
+                            <a href="https://goo.gl/maps/J4VVqDv4dF92" class="btn btn-postais">VER LOCALIZAÇÃO</a>
+                            <a href="" class="btn btn-postais btn-postais-descricao" data-pagename="antaSaoDinis">VER DESCRIÇÃO</a>
                         </div>
                     </div>
             </div>
@@ -305,18 +305,13 @@
     </div>
 
     <div class="modal">
-        <div class="modal__content">
+        <div class="modal__wrapper">
             <span class="modal-close icon icon--close u-p-top-right-s">&nbsp;</span>
-            <!--<div class="postais__modal-content">
-                <h3 class="heading-postais">Cromeleque das Fontainhas</h3>
-                <p class="paragraph">O recinto das Fontainhas foi identificado pela equipa dos Serviços Geológicos de Portugal. A descoberta foi publicada em 1977, num artigo que mencionava a existência de seis menires, quatro dos quais in situ, um quinto monólito tombado e o sexto, o maior de todos e que se situava ao centro, partido junto à base e igualmente tombado. A campanha de escavações realizada em 2005 por Manuel Calado e Leonor Rocha, teve como objectivo avaliar o seu estado de conservação, recolher informação científica e proceder ao seu restauro. Um ano depois, todos os menires foram recolocados na sua posição original. Este recinto faz parte de um pequeno conjunto de monumentos praticamente exclusivos do Alentejo Central, tanto pela sua raridade como pela sua antiguidade e encontra-se classificado como Imóvel de Interesse Público desde 1990.</p>
-                <p class="paragraph"><small><span class="paragraph__strong">Fonte:</span> 'O Tempo das Pedras: Carta Arqueológica de Mora' de Manuel Calado, Leonor Rocha e Pedro Alvim</small></p>
-                <p class="paragraph u-margin-bottom-s"><span class="paragraph__strong">Freguesia:</span> Pavia</p>
-                <p class="paragraph"><span class="paragraph__strong">Acessibilidade:</span> Fácil</p> 
-                <a href="" class="btn btn-modal-postais">VER LOCALIZAÇÃO</a>
-            </div>-->
+            <div class="modal__content"></div>
         </div>
     </div>
-    <script src="assets/scripts/App-0b4a7454b9.js"></script>
+
+
+    <script src="assets/scripts/App-a3800637e7.js"></script>
 </body>
 </html>
