--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Museu Interactivo do Megalitismo</title>
     <link href="https://fonts.googleapis.com/css?family=Dosis:300,500,700" rel="stylesheet">
-    <link rel="stylesheet" href="assets/styles/styles-b65ac14a40.css"/>
+    <link rel="stylesheet" href="assets/styles/styles-976eca85e1.css"/>
     <script src="assets/scripts/Vendor-025e9571d0.js"></script>
 </head>
 <body>
@@ -149,43 +149,83 @@
                     <figcaption class="postais__figure-title postais__figure-title--show">Anta de São Dinis</figcaption>
                 </figure>
                 <div class="postais__info">
-                        <h3 class="postais__heading">Anta de São Dinis</h3>
-                        <p class="postais__tag">Pavia</p>
-                        <div class="btn-box u-margin-top-sm">
-                            <a href="https://goo.gl/maps/J4VVqDv4dF92" class="btn btn-postais">VER LOCALIZAÇÃO</a>
-                            <a href="" class="btn btn-postais btn-postais-descricao" data-pagename="antaSaoDinis">VER DESCRIÇÃO</a>
-                        </div>
+                    <h3 class="postais__heading">Anta de São Dinis</h3>
+                    <p class="postais__tag">Pavia</p>
+                    <div class="btn-box u-margin-top-sm">
+                        <a href="https://goo.gl/maps/J4VVqDv4dF92" class="btn btn-postais">VER LOCALIZAÇÃO</a>
+                        <a href="" class="btn btn-postais btn-postais-descricao" data-pagename="antaSaoDinis">VER DESCRIÇÃO</a>
                     </div>
+                </div>
             </div>
             <div class="swiper-slide">
                 <figure class="postais__figure">
                     <img src="assets/images/megalitismoSlider/alinhamento-tera_768w.jpg" class="postais__figure-image" alt="Alinhamento de Tera">
-                    <figcaption class="postais__figure-title">Alinhamento de Tera</figcaption>
+                    <figcaption class="postais__figure-title postais__figure-title--show">Alinhamento de Tera</figcaption>
                 </figure>
+                <div class="postais__info">
+                    <h3 class="postais__heading">Alinhamento de Tera</h3>
+                    <p class="postais__tag">Pavia</p>
+                    <div class="btn-box u-margin-top-sm">
+                        <a href="https://goo.gl/maps/J4VVqDv4dF92" class="btn btn-postais">VER LOCALIZAÇÃO</a>
+                        <a href="" class="btn btn-postais btn-postais-descricao" data-pagename="alinhamentoTera">VER DESCRIÇÃO</a>
+                    </div>
+                </div>
             </div>
             <div class="swiper-slide">
                 <figure class="postais__figure">
                     <img src="assets/images/megalitismoSlider/goncala_768w.jpg" class="postais__figure-image" alt="Gonçala">
-                    <figcaption class="postais__figure-title">Gonçala</figcaption>
+                    <figcaption class="postais__figure-title postais__figure-title--show">Gonçala</figcaption>
                 </figure>
+                <div class="postais__info">
+                    <h3 class="postais__heading">Gonçala</h3>
+                    <p class="postais__tag">Pavia</p>
+                    <div class="btn-box u-margin-top-sm">
+                        <a href="https://goo.gl/maps/J4VVqDv4dF92" class="btn btn-postais">VER LOCALIZAÇÃO</a>
+                        <a href="" class="btn btn-postais btn-postais-descricao" data-pagename="goncala">VER DESCRIÇÃO</a>
+                    </div>
+                </div>
             </div>
             <div class="swiper-slide">
                 <figure class="postais__figure">
                     <img src="assets/images/megalitismoSlider/vale-del-rei_768w.jpg" class="postais__figure-image" alt="Vale d'el Rei">
-                    <figcaption class="postais__figure-title">Vale d'el Rei</figcaption>
+                    <figcaption class="postais__figure-title postais__figure-title--show">Vale d'el Rei</figcaption>
                 </figure>
+                <div class="postais__info">
+                    <h3 class="postais__heading">Vale d'el Rei</h3>
+                    <p class="postais__tag">Pavia</p>
+                    <div class="btn-box u-margin-top-sm">
+                        <a href="https://goo.gl/maps/J4VVqDv4dF92" class="btn btn-postais">VER LOCALIZAÇÃO</a>
+                        <a href="" class="btn btn-postais btn-postais-descricao" data-pagename="valeDelRei">VER DESCRIÇÃO</a>
+                    </div>
+                </div>
             </div>
             <div class="swiper-slide">
                 <figure class="postais__figure">
                     <img src="assets/images/megalitismoSlider/matalote_768w.jpg" class="postais__figure-image" alt="Matalote">
-                    <figcaption class="postais__figure-title">Matalote</figcaption>
+                    <figcaption class="postais__figure-title postais__figure-title--show">Matalote</figcaption>
                 </figure>
+                <div class="postais__info">
+                    <h3 class="postais__heading">Matalote</h3>
+                    <p class="postais__tag">Pavia</p>
+                    <div class="btn-box u-margin-top-sm">
+                        <a href="https://goo.gl/maps/J4VVqDv4dF92" class="btn btn-postais">VER LOCALIZAÇÃO</a>
+                        <a href="" class="btn btn-postais btn-postais-descricao" data-pagename="matalote">VER DESCRIÇÃO</a>
+                    </div>
+                </div>
             </div>
             <div class="swiper-slide">
                 <figure class="postais__figure">
                     <img src="assets/images/megalitismoSlider/menir-de-tera_768w.jpg" class="postais__figure-image" alt="Menir de Têra">
-                    <figcaption class="postais__figure-title">Menir de Têra</figcaption>
+                    <figcaption class="postais__figure-title postais__figure-title--show">Menir de Têra</figcaption>
                 </figure>
+                <div class="postais__info">
+                    <h3 class="postais__heading">Menir de Têra</h3>
+                    <p class="postais__tag">Pavia</p>
+                    <div class="btn-box u-margin-top-sm">
+                        <a href="https://goo.gl/maps/J4VVqDv4dF92" class="btn btn-postais">VER LOCALIZAÇÃO</a>
+                        <a href="" class="btn btn-postais btn-postais-descricao" data-pagename="menirTera">VER DESCRIÇÃO</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -312,6 +352,6 @@
     </div>
 
 
-    <script src="assets/scripts/App-a3800637e7.js"></script>
+    <script src="assets/scripts/App-7cfb854702.js"></script>
 </body>
 </html>
