Inicio da secção Preçário

--- a/dev/index.html
+++ b/dev/index.html
@@ -305,6 +305,53 @@
         </div>
     </section>
 
+    <section class="precario">
+        <div class="wrapper">
+            <h1 class="heading-primary" data-section-title="PREÇÁRIO">PREÇÁRIO</h1>
+            <table>
+                <caption>VISITA LIVRE</caption>
+                <thead>
+                    <th>
+                        <td>&nbsp</td>
+                        <td>NORMAL</td>
+                        <td>GRUPOS*</td>
+                    </th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>PORTADOR DE DEFICIÊNCIA</td>
+                        <td>-50%</td>
+                        <td>&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td>CRIANÇA <span>(0 - 2 anos)</span></td>
+                        <td>GRÁTIS</td>
+                        <td>&nbsp;</td>
+                    </tr>
+                    <tr>
+                        <td>JOVEM <span>(3 - 12 anos)</span></td>
+                        <td>2.50€</td>
+                        <td>2.00€</td>
+                    </tr>
+                    <tr>
+                        <td>ADULTO <span>(13 - 64 anos)</span></td>
+                        <td>5.00€</td>
+                        <td>4.50€</td>
+                    </tr>
+                    <tr>
+                        <td>SÉNIOR <span>(65+ anos)</span></td>
+                        <td>3.50€</td>
+                        <td>3.00€</td>
+                    </tr>
+                    <tr>
+                        <td>FAMÍLIA**</td>
+                        <td>-0.50€<br><span>p/Cada</span></td>
+                        <td></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </section>
 
     <div class="swiper-container galeria-swiper">
         <div class="swiper-wrapper">
