Adição de mapa e custom marker

--- a/dev/index.html
+++ b/dev/index.html
@@ -537,6 +537,7 @@
     </div>
 
     <section class="contactos">
+        <div class="contactos__mapa"></div>
         <div class="wrapper">
             <h1 class="heading-primary" data-section-title="CONTACTE-NOS">CONTACTE-NOS</h1>
             <form action="" method="POST">
@@ -572,8 +573,12 @@
         </div>
     </div>
 
+    
+    <script defer async
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA4sciudjQxavw9NnmO7iHR-HFJ3QK1cIw">
+    </script>
     <!-- build:js assets/scripts/App.js -->
-    <script src="assets/scripts/App.js"></script>
+    <script defer src="assets/scripts/App.js"></script>
     <!-- endbuild -->
 </body>
 </html>
